# AI-Product-Listing-Assistant

./: .env.example  .gitignore  ANALYSIS_ERROR_FIXED.md  API_CONNECTION_FIXED.md  API_FIX_SUMMARY.md  APPLICATION_STATUS_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FRONTEND_MIGRATION_SUMMARY.md  HTTP_500_ERROR_DIAGNOSIS_COMPLETE.md  IMAGE_CLASSIFICATION_FEATURE.md  Makefile  PRODUCTION_DEPLOYMENT_SUCCESS.md  README.md  REAL_AI_IMPLEMENTATION_SUCCESS.md  TROUBLESHOOTING_SUMMARY.md  check_available_models.py  debug_analysis_error.py  debug_gemini_api.py  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  streamlit_app_cloud.py  streamlit_app_local.py  vercel.json
.github/workflows/: ci.yml
.streamlit/: README.md  config.toml
api/: gemini_service.py  main.py  product_listing_service.py  requirements.txt
docs/: local_review.md  portfolio_review.md  product_listing_methodology.md
e2e-tests/: package-lock.json  package.json  playwright.config.ts
e2e-tests/playwright-report/: index.html
fixtures/images/: synthetic_desk_organizer.ppm
fixtures/products/: synthetic_desk_organizer.json
frontend/: README.md  package-lock.json  package.json
frontend/playwright-report/: index.html
frontend/public/: test-api.html
frontend/src/app/: layout.tsx  page.tsx
scripts/: check_repo_guardrails.py  generate_local_product_listing_report.py
services/: gemini_service.py  product_analysis_manager.py  resilient_product_analysis_service.py
tests/: test_product_listing_service.py
