[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-product-listing-assistant"
version = "0.1.0"
description = "AI-powered product listing generator using Google Gemini"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "AI Product Listing Assistant", email = "contact@example.com"}
]
license = {text = "MIT"}
keywords = ["ai", "product-listing", "gemini", "fastapi", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools]
py-modules = ["main", "streamlit_app"]
dependencies = [
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.47.1",
    "uvicorn[standard]>=0.35.0",
    "tenacity>=8.2.2",
    "structlog>=24.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "pytest-xdist>=3.5.0",
]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
